--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,9 +3,9 @@ name: CD
 
 on:
   # Runs on pushes targeting the default branch
-  pull_request:
+  push:
     branches: ["main"]
-  workflow_call:
+  
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -23,8 +23,11 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
+  ci:
+    uses: ./.github/workflows/ci.yml
   # Single deploy job since we're just deploying
   deploy:
+    needs: [ci]
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
